feat(sprint-114): T3 — golden corpus baseline (13 deterministic scenarios)
Extend the binary-compatibility harness with deterministic generators for
every foundational Lucene 10.4.0 serialised format and integrate the result
into CI. The harness now ships, alongside the smoke fixture, twelve
format-targeted scenarios that collectively cover postings, doc values,
stored fields, term vectors, norms, points/BKD, KNN vectors, compound
files, FieldInfos, segment infos, live docs and FST blobs. Per the task
brief, Hunspell and Snowball remain deferred (precompiled third-party
assets) and are listed in the manifest as such.

Scope:
- Determinism: new Determinism.seed() seeds Lucene's tests.seed system
  property and reflectively resets StringHelper.nextId so every segment
  id is reproducible across runs. Main.main calls it as the first action
  of gen/verify; scenarios call it defensively at the top of generate().
- Scenarios (under .../scenarios/): PostingsFormatScenario,
  DocValuesFormatScenario, StoredFieldsFormatScenario,
  TermVectorsFormatScenario, NormsFormatScenario, PointsFormatScenario,
  KnnVectorsFormatScenario, CompoundFormatScenario,
  FieldInfosFormatScenario, SegmentInfoFormatScenario,
  LiveDocsFormatScenario, FstBlobScenario, plus the abstract
  IndexCorpusScenario base.
- ScenarioDeterminismTest: parameterised JUnit 5 test asserting normalised
  byte-equality of two generations per scenario for seeds 0 and 0xC0FFEE
  (26 cases, all green).
- Manifest.java: normalised directory digest (sha256-of-sha256 sorted by
  filename) that excludes .si and write.lock. The exclusion is necessary
  because Lucene IndexWriter#setDiagnostics stamps a wall-clock timestamp
  into .si; every other emitted file is fully byte-deterministic. This
  divergence is the documented carve-out in the binary-compat mandate
  (CLAUDE.md §3); per-package round-trip tests (T5..Tn) still read every
  byte of every file including .si.
- tools/lucene-fixtures/manifests/baseline.tsv: 14 r